# ai-assistant-manager

./: .env.local  README.md  pyproject.toml  run_build.py  run_end_to_end.py  run_end_to_end_with_tools.py  setup.cfg
.github/workflows/: continuous-integration.yml
ai_assistant_manager/: encoding.py  env_variables.py  env_variables_test.py  named_bytes.py
ai_assistant_manager/assistants/: assistant_service.py  assistant_service_test.py
ai_assistant_manager/chats/: chat.py  chat_response.py  chat_test.py
ai_assistant_manager/clients/: openai_api.py  openai_api_test.py
ai_assistant_manager/exporters/: content_data.py  exporter.py  exporter_test.py
ai_assistant_manager/exporters/directory/: directory_exporter.py  directory_exporter_test.py
ai_assistant_manager/exporters/files/: files_exporter.py  files_exporter_test.py
ai_assistant_manager/prompts/: prompt.py  prompt_test.py  sample_prompt.md  sample_prompt_with_tool_call.md
ai_assistant_manager/timer/: timer.py  timer_test.py
ai_assistant_manager/tools/: tools.json  tools.py  tools_test.py  weather.py
data/directory/: 001 Test File.md
src/assistants/: assistant_service.py  assistant_service_test.py
src/chats/: chat.py  chat_test.py
src/clients/: openai_api.py  openai_api_test.py
src/timer/: timer_test.py
